--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.3.3
-pandas==2.0.3
-scikit-learn==1.4.2
-numpy==2.0.3
-openpyxl==3.1.2
-gunicorn==21.2.0
+Flask
+pandas
+scikit-learn
+openpyxl
+gunicorn
+
 
 
