--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Flask
-pandas
-scikit-learn
-openpyxl
-gunicorn
-
-
+Flask==3.1.2
+pandas==2.3.3
+scikit-learn==1.7.2
+gunicorn==23.0.0
+numpy==2.0.2
 
